# Killin-IT

./: E-Stop.cpp  platformio.ini
include/: E-Stop copy.txt
include/TFT_eSPI/User_Setups/: Setup46_GC9A01_ESP32.h
lib/: lv_conf.h
lib/TFT_eSPI/Fonts/GFXFF/: Designer24pt.h
lib/TFT_eSPI/User_Setups/: Setup46_GC9A01_ESP32.h
lib/TFT_eSPI/examples/Sprite/Sprite_draw/: Sprite_draw.ino
lib/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.cpp  ui_events.h  ui_helpers.c  ui_helpers.h
lib/ui/src/components/: ui_comp.c  ui_comp.h  ui_comp_clear.c  ui_comp_clear.h  ui_comp_hook.c  ui_comp_hook.h
lib/ui/src/fonts/: ui_font_Akira_Extended.c  ui_font_Designer.c  ui_font_Designer24.c
lib/ui/src/screens/: ui_Active_Screen.c  ui_Clear_Screen.c  ui_No_Connection_Active.c  ui_No_Connection_Clear.c  ui_Standby_Screen.c
src/: AkiraExtended_26.h  Designer_24.h  Designer_38.h  E-Stop.cpp  GIFDraw.h  Quicksilver_40.h  SFX_GIF.h  Smooth_Arc.txt  Sprite_draw.txt  Sprite_test.txt
